--- a/Lean/Lean.vcxproj
+++ b/Lean/Lean.vcxproj
@@ -15,13 +15,16 @@
     <ClCompile Include="ApplicationTimer.cpp" />
     <ClCompile Include="Ball.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Clock.cpp" />
     <ClCompile Include="D3D.cpp" />
     <ClCompile Include="DuckRenderer\DCollision.cpp" />
     <ClCompile Include="DuckRenderer\HString.cpp" />
     <ClCompile Include="DuckRenderer\MathFuncs.cpp" />
+    <ClCompile Include="FontClass.cpp" />
     <ClCompile Include="FPSClass.cpp" />
     <ClCompile Include="Goal.cpp" />
     <ClCompile Include="Heightfield.cpp" />
+    <ClCompile Include="ImageClass.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="InstanceRenderer.cpp" />
     <ClCompile Include="LeafObstacle.cpp" />
@@ -37,6 +40,7 @@
     <ClCompile Include="ParticleEmitter.cpp" />
     <ClCompile Include="PhysicsBridge.cpp" />
     <ClCompile Include="PhysicsManager.cpp" />
+    <ClCompile Include="SentenceClass.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Skybox.cpp" />
     <ClCompile Include="Sound.cpp" />
@@ -54,6 +58,7 @@
     <ClInclude Include="ApplicationTimer.h" />
     <ClInclude Include="Ball.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Clock.h" />
     <ClInclude Include="D3D Includes.h" />
     <ClInclude Include="D3D.h" />
     <ClInclude Include="DuckRenderer\Array.h" />
@@ -62,9 +67,11 @@
     <ClInclude Include="DuckRenderer\HString.h" />
     <ClInclude Include="DuckRenderer\MathFuncs.h" />
     <ClInclude Include="DuckRenderer\MathStructs.h" />
+    <ClInclude Include="FontClass.h" />
     <ClInclude Include="FPSClass.h" />
     <ClInclude Include="Goal.h" />
     <ClInclude Include="Heightfield.h" />
+    <ClInclude Include="ImageClass.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="InstanceRenderer.h" />
     <ClInclude Include="LeafObstacle.h" />
@@ -79,6 +86,7 @@
     <ClInclude Include="ParticleEmitter.h" />
     <ClInclude Include="PhysicsBridge.h" />
     <ClInclude Include="PhysicsManager.h" />
+    <ClInclude Include="SentenceClass.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Skybox.h" />
     <ClInclude Include="Sound.h" />
