--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@ Debug/Lean.exe
 Debug/Lean.ilk
 Debug/Lean.exe
 Lean/Debug/DCollision.obj
+Debug/Lean.ilk
+Debug/Lean.exe
+Lean/Debug/DCollision.obj
